# PermissionAccountsManagementSystem

./: .gitignore  CLAUDE.md  README.md  exercise.md  future-enhancements.md  openapi.yml  package-lock.json  package.json  pyproject.toml  serverless.yml  tests.txt
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  auth.js  index.css
client/src/api/: permissions.js
client/src/components/: ManagementScreen.jsx  PermissionForm.jsx  UserScreen.jsx
src/bl/: create_permission.py  delete_permission.py  get_permission.py  get_user_permissions.py  process_permission.py  query_permissions.py  time_filtering.py  update_permission.py
src/handlers/: create_permission.py  delete_permission.py  get_permission.py  get_user_permissions.py  process_permission.py  query_permissions.py  update_permission.py
src/models/: api_models.py  exceptions.py  permission.py  permission_status.py
src/repositories/: permissions_repo.py
src/utils/: auth.py  jwt_parser.py  logger.py  response.py  sqs.py  validation.py
tests/e2e/: test_e2e_permissions.py
tests/integration/: test_permissions_api.py
tests/unit/: test_jwt_parser.py  test_permission_model.py  test_permissions_bl.py  test_process_permission.py  test_time_filtering.py  test_validation.py
